--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
           <li>
             <b>Dynamical Isometry and a Mean Field Theory of LSTMs and GRUs </b>
             <br>
-            <a href="#">Dar Gilboa</a>,
-            <a href="#">Bo Chang</a>,
-            <a href="https://scholar.google.com/citations?user=kR7DersAAAAJ">Minmin Chen</a>,
-            <a href="https://scholar.google.com/citations?user=Xz4RAJkAAAAJ">Greg Yang</a>,
-            <a href="https://scholar.google.com/citations?user=mk-zQBsAAAAJ">Samuel S. Schoenholz</a>,
-            <a href="https://scholar.google.com/citations?user=VuWl-KUAAAAJ">Ed H. Chi</a>,
-            <a href="https://scholar.google.com/citations?user=cn_FoswAAAAJ">Jeffrey Pennington</a>
+            <a href="#">Dar&nbsp;Gilboa</a>,
+            <a href="#">Bo&nbsp;Chang</a>,
+            <a href="https://scholar.google.com/citations?user=kR7DersAAAAJ">Minmin&nbsp;Chen</a>,
+            <a href="https://scholar.google.com/citations?user=Xz4RAJkAAAAJ">Greg&nbsp;Yang</a>,
+            <a href="https://scholar.google.com/citations?user=mk-zQBsAAAAJ">Samuel&nbsp;S.&nbsp;Schoenholz</a>,
+            <a href="https://scholar.google.com/citations?user=VuWl-KUAAAAJ">Ed&nbsp;H.&nbsp;Chi</a>,
+            <a href="https://scholar.google.com/citations?user=cn_FoswAAAAJ">Jeffrey&nbsp;Pennington</a>
             <br> Preprint, 2019.
             <br>
             [<a href="https://arxiv.org/abs/1901.08987">arXiv</a>]
@@ -104,9 +104,9 @@
           <li>
             <b>Convolutional Neural Networks Combined with Runge–Kutta Methods </b>
             <br>
-            <a href="https://scholar.google.com/citations?user=i1Qj3CoAAAAJ">Mai Zhu</a>,
-            <a href="#">Bo Chang</a>,
-            <a href="https://scholar.google.com/citations?user=xq76xEMAAAAJ">Chong Fu</a>
+            <a href="https://scholar.google.com/citations?user=i1Qj3CoAAAAJ">Mai&nbsp;Zhu</a>,
+            <a href="#">Bo&nbsp;Chang</a>,
+            <a href="https://scholar.google.com/citations?user=xq76xEMAAAAJ">Chong&nbsp;Fu</a>
             <br> Preprint, 2018.
             <br>
             [<a href="https://arxiv.org/abs/1802.08831">arXiv</a>]
@@ -128,27 +128,21 @@
         <h3>Peer-Reviewed Articles</h3>
         <ul>
           <li>
-            <b>Point Process Flows </b>
+            <b>Copula Diagnostics for Asymmetries and Conditional Dependence </b>
             <br>
-            <a href="https://scholar.google.com/citations?user=pyfYKvYAAAAJ">Nazanin Mehrasa</a>,
-            <a href="https://scholar.google.com/citations?user=JlmzaGsAAAAJ">Ruizhi Deng</a>,
-            <a href="https://scholar.google.com/citations?user=jyVyVj4AAAAJ">Mohamed Osama Ahmed</a>,
-            <a href="#">Bo Chang</a>,
-            <a href="https://scholar.google.com/citations?user=7zKNBtgAAAAJ">Jiawei He</a>,
-            <a href="https://scholar.google.com/citations?user=89lm_XIAAAAJ">Thibaut Durand</a>,
-            <a href="https://scholar.google.com/citations?user=x2wyjkAAAAAJ">Marcus Brubaker</a>,
-            <a href="https://scholar.google.com/citations?user=Bl9FSL0AAAAJ">Greg Mori</a>
-            <br> Temporal Point Processes (TPP) Workshop at NeurIPS, 2019.
+            <a href="#">Bo&nbsp;Chang</a>,
+            <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry&nbsp;Joe</a>
+            <br> Journal of Applied Statistics, to appear.
             <br>
-            [<a href="https://arxiv.org/abs/1910.08281">arXiv</a>]
-            [<a data-toggle="collapse" href="#mehrasa2019point">BibTeX</a>]
+            [<a href="https://doi.org/10.1080/02664763.2019.1685080">Journal</a>]
+            [<a data-toggle="collapse" href="#chang2019copula">BibTeX</a>]
             <p />
-            <div class="collapse" id="mehrasa2019point">
+            <div class="collapse" id="chang2019copula">
               <code>
-                @article{mehrasa2019point,
-                <br>&nbsp; title={Point Process Flows},
-                <br>&nbsp; author={Mehrasa, Nazanin and Deng, Ruizhi and Ahmed, Mohamed Osama and Chang, Bo and He, Jiawei and Durand, Thibaut and Brubaker, Marcus and Mori, Greg},
-                <br>&nbsp; journal={arXiv preprint arXiv:1910.08281},
+                @article{chang2019copula,
+                <br>&nbsp; title = {Copula diagnostics for asymmetries and conditional dependence},
+                <br>&nbsp; author={Chang, Bo and Joe, Harry},
+                <br>&nbsp; journal = {Journal of Applied Statistics},
                 <br>&nbsp; year={2019}.
                 <br>}
               </code>
@@ -158,9 +152,9 @@
           <li>
             <b>Vine Copula Regression for Observational Studies </b>
             <br>
-            <a href="https://scholar.google.com/citations?user=y6E9TycAAAAJ">Roger M. Cooke</a>,
-            <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry Joe</a>,
-            <a href="#">Bo Chang</a>
+            <a href="https://scholar.google.com/citations?user=y6E9TycAAAAJ">Roger&nbsp;M.&nbsp;Cooke</a>,
+            <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry&nbsp;Joe</a>,
+            <a href="#">Bo&nbsp;Chang</a>
             <br> AStA Advances in Statistical Analysis, to appear.
             <br>
             [<a href="https://doi.org/10.1007/s10182-019-00353-5">Journal</a>]
@@ -179,10 +173,38 @@
             <p />
           </li>
           <li>
+            <b>Point Process Flows </b>
+            <br>
+            <a href="https://scholar.google.com/citations?user=pyfYKvYAAAAJ">Nazanin&nbsp;Mehrasa</a>,
+            <a href="https://scholar.google.com/citations?user=JlmzaGsAAAAJ">Ruizhi&nbsp;Deng</a>,
+            <a href="https://scholar.google.com/citations?user=jyVyVj4AAAAJ">Mohamed&nbsp;Osama&nbsp;Ahmed</a>,
+            <a href="#">Bo&nbsp;Chang</a>,
+            <a href="https://scholar.google.com/citations?user=7zKNBtgAAAAJ">Jiawei&nbsp;He</a>,
+            <a href="https://scholar.google.com/citations?user=89lm_XIAAAAJ">Thibaut&nbsp;Durand</a>,
+            <a href="https://scholar.google.com/citations?user=x2wyjkAAAAAJ">Marcus&nbsp;Brubaker</a>,
+            <a href="https://scholar.google.com/citations?user=Bl9FSL0AAAAJ">Greg&nbsp;Mori</a>
+            <br> Temporal Point Processes (TPP) Workshop at NeurIPS, 2019.
+            <br>
+            [<a href="https://arxiv.org/abs/1910.08281">arXiv</a>]
+            [<a data-toggle="collapse" href="#mehrasa2019point">BibTeX</a>]
+            <p />
+            <div class="collapse" id="mehrasa2019point">
+              <code>
+                @article{mehrasa2019point,
+                <br>&nbsp; title={Point Process Flows},
+                <br>&nbsp; author={Mehrasa, Nazanin and Deng, Ruizhi and Ahmed, Mohamed Osama and Chang, Bo and He, Jiawei and Durand, Thibaut and Brubaker, Marcus and Mori, Greg},
+                <br>&nbsp; journal={arXiv preprint arXiv:1910.08281},
+                <br>&nbsp; year={2019}.
+                <br>}
+              </code>
+            </div>
+            <p />
+          </li>
+          <li>
             <b>Prediction Based on Conditional Distributions of Vine Copulas </b>
             <br>
-            <a href="#">Bo Chang</a>,
-            <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry Joe</a>
+            <a href="#">Bo&nbsp;Chang</a>,
+            <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry&nbsp;Joe</a>
             <br> Computational Statistics & Data Analysis 139: 45&ndash;63, 2019.
             <br>
             [<a href="https://arxiv.org/abs/1807.08429">arXiv</a>]
@@ -207,13 +229,13 @@
           <li>
             <b>Interpretable Spatio-Temporal Attention for Video Action Recognition </b>
             <br>
-            <a href="https://scholar.google.com/citations?user=JzNMKQoAAAAJ">Lili Meng</a>,
-            <a href="https://scholar.google.com/citations?user=a8OCiUEAAAAJ">Bo Zhao</a>,
+            <a href="https://scholar.google.com/citations?user=JzNMKQoAAAAJ">Lili&nbsp;Meng</a>,
+            <a href="https://scholar.google.com/citations?user=a8OCiUEAAAAJ">Bo&nbsp;Zhao</a>,
             <a href="#">Bo Chang</a>,
-            <a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ">Gao Huang</a>,
-            <a href="#">Wei Sun</a>,
-            <a href="https://scholar.google.com/citations?user=T4EeZ9gAAAAJ">Frederick Tung</a>,
-            <a href="https://scholar.google.com/citations?user=P2mG6rcAAAAJ">Leonid Sigal</a>
+            <a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ">Gao&nbsp;Huang</a>,
+            <a href="#">Wei&nbsp;Sun</a>,
+            <a href="https://scholar.google.com/citations?user=T4EeZ9gAAAAJ">Frederick&nbsp;Tung</a>,
+            <a href="https://scholar.google.com/citations?user=P2mG6rcAAAAJ">Leonid&nbsp;Sigal</a>
             <br> Holistic Video Understanding (HVU) Workshop at ICCV, 2019.
             <br>
             [<a href="https://arxiv.org/abs/1810.04511">arXiv</a>]
@@ -235,10 +257,10 @@
           <li>
             <b>AntisymmetricRNN: A Dynamical System View on Recurrent Neural Networks </b>
             <br>
-            <a href="#">Bo Chang</a>,
-            <a href="https://scholar.google.com/citations?user=kR7DersAAAAJ">Minmin Chen</a>,
-            <a href="https://scholar.google.com/citations?user=NZmEIS8AAAAJ">Eldad Haber</a>,
-            <a href="https://scholar.google.com/citations?user=VuWl-KUAAAAJ">Ed H. Chi</a>
+            <a href="#">Bo&nbsp;Chang</a>,
+            <a href="https://scholar.google.com/citations?user=kR7DersAAAAJ">Minmin&nbsp;Chen</a>,
+            <a href="https://scholar.google.com/citations?user=NZmEIS8AAAAJ">Eldad&nbsp;Haber</a>,
+            <a href="https://scholar.google.com/citations?user=VuWl-KUAAAAJ">Ed&nbsp;H.&nbsp;Chi</a>
             <br> International Conference on Learning Representations (ICLR), 2019.
             <br>
             [<a href="https://arxiv.org/abs/1902.09689">arXiv</a>]
@@ -261,9 +283,9 @@
           <li>
             <b>Vine Copula Structure Learning via Monte Carlo Tree Search </b>
             <br>
-            <a href="#">Bo Chang</a>,
-            <a href="https://scholar.google.com/citations?user=NdsuWYIAAAAJ">Shenyi Pan</a>,
-            <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry Joe</a>
+            <a href="#">Bo&nbsp;Chang</a>,
+            <a href="https://scholar.google.com/citations?user=NdsuWYIAAAAJ">Shenyi&nbsp;Pan</a>,
+            <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry&nbsp;Joe</a>
             <br> International Conference on Artificial Intelligence and Statistics (AISTATS), 2019.
             <br>
             [<a href="http://proceedings.mlr.press/v89/chang19a.html">Proceedings</a>]
@@ -285,10 +307,10 @@
           <li>
             <b>Modular Generative Adversarial Networks </b>
             <br>
-            <a href="https://scholar.google.com/citations?user=a8OCiUEAAAAJ">Bo Zhao</a>,
-            <a href="#">Bo Chang</a>,
-            <a href="https://scholar.google.com/citations?user=4sKGNB0AAAAJ">Zequn Jie</a>,
-            <a href="https://scholar.google.com/citations?user=P2mG6rcAAAAJ">Leonid Sigal</a>
+            <a href="https://scholar.google.com/citations?user=a8OCiUEAAAAJ">Bo&nbsp;Zhao</a>,
+            <a href="#">Bo&nbsp;Chang</a>,
+            <a href="https://scholar.google.com/citations?user=4sKGNB0AAAAJ">Zequn&nbsp;Jie</a>,
+            <a href="https://scholar.google.com/citations?user=P2mG6rcAAAAJ">Leonid&nbsp;Sigal</a>
             <br> European Conference on Computer Vision (ECCV), 2018.
             <br>
             [<a href="https://arxiv.org/abs/1804.03343">arXiv</a>]
@@ -312,11 +334,11 @@
           <li>
             <b>Multi-level Residual Networks from Dynamical Systems View </b>
             <br>
-            <a href="#">Bo Chang</a>*,
-            <a href="https://scholar.google.com/citations?user=JzNMKQoAAAAJ">Lili Meng</a>*,
-            <a href="https://scholar.google.com/citations?user=NZmEIS8AAAAJ">Eldad Haber</a>,
-            <a href="https://scholar.google.com/citations?user=T4EeZ9gAAAAJ">Frederick Tung</a>,
-            <a href="https://scholar.google.com/citations?user=iTUn4mUAAAAJ">David Begert</a>
+            <a href="#">Bo&nbsp;Chang</a>*,
+            <a href="https://scholar.google.com/citations?user=JzNMKQoAAAAJ">Lili&nbsp;Meng</a>*,
+            <a href="https://scholar.google.com/citations?user=NZmEIS8AAAAJ">Eldad&nbsp;Haber</a>,
+            <a href="https://scholar.google.com/citations?user=T4EeZ9gAAAAJ">Frederick&nbsp;Tung</a>,
+            <a href="https://scholar.google.com/citations?user=iTUn4mUAAAAJ">David&nbsp;Begert</a>
             <br> International Conference on Learning Representations (ICLR), 2018.
             <br>
             [<a href="https://arxiv.org/abs/1710.10348">arXiv</a>]
@@ -339,10 +361,10 @@
           <li>
             <b>Generating Handwritten Chinese Characters Using CycleGAN </b>
             <br>
-            <a href="#">Bo Chang</a>*,
-            <a href="https://www.stat.ubc.ca/~qiong.zhang/">Qiong Zhang</a>*,
-            <a href="https://scholar.google.com/citations?user=NdsuWYIAAAAJ">Shenyi Pan</a>,
-            <a href="https://scholar.google.com/citations?user=JzNMKQoAAAAJ">Lili Meng</a>
+            <a href="#">Bo&nbsp;Chang</a>*,
+            <a href="https://www.stat.ubc.ca/~qiong.zhang/">Qiong&nbsp;Zhang</a>*,
+            <a href="https://scholar.google.com/citations?user=NdsuWYIAAAAJ">Shenyi&nbsp;Pan</a>,
+            <a href="https://scholar.google.com/citations?user=JzNMKQoAAAAJ">Lili&nbsp;Meng</a>
             <br> IEEE Winter Conference on Applications of Computer Vision (WACV), 2018.
             <br>
             [<a href="https://arxiv.org/abs/1801.08624">arXiv</a>]
@@ -366,12 +388,12 @@
           <li>
             <b>Reversible Architectures for Arbitrarily Deep Residual Neural Networks </b>
             <br>
-            <a href="#">Bo Chang</a>*,
-            <a href="https://scholar.google.com/citations?user=JzNMKQoAAAAJ">Lili Meng</a>*,
-            <a href="https://scholar.google.com/citations?user=NZmEIS8AAAAJ">Eldad Haber</a>,
-            <a href="https://scholar.google.com/citations?user=EaBF6r0AAAAJ">Lars Ruthotto</a>,
-            <a href="https://scholar.google.com/citations?user=iTUn4mUAAAAJ">David Begert</a>,
-            <a href="https://scholar.google.com/citations?user=-n0XkbEAAAAJ">Elliot Holtham</a>
+            <a href="#">Bo&nbsp;Chang</a>*,
+            <a href="https://scholar.google.com/citations?user=JzNMKQoAAAAJ">Lili&nbsp;Meng</a>*,
+            <a href="https://scholar.google.com/citations?user=NZmEIS8AAAAJ">Eldad&nbsp;Haber</a>,
+            <a href="https://scholar.google.com/citations?user=EaBF6r0AAAAJ">Lars&nbsp;Ruthotto</a>,
+            <a href="https://scholar.google.com/citations?user=iTUn4mUAAAAJ">David&nbsp;Begert</a>,
+            <a href="https://scholar.google.com/citations?user=-n0XkbEAAAAJ">Elliot&nbsp;Holtham</a>
             <br> AAAI Conference on Artificial Intelligence (AAAI), 2018.
             <br>
             [<a href="https://arxiv.org/abs/1709.03698">arXiv</a>]
@@ -396,7 +418,7 @@
           <li>
             <b>Vine Copulas: Dependence Structure Learning, Diagnostics, and Applications to Regression Analysis </b>
             <br>
-            <a href="#">Bo Chang</a>
+            <a href="#">Bo&nbsp;Chang</a>
             <br> University of British Columbia, 2019.
             <br>
             [<a href="https://dx.doi.org/10.14288/1.0379699">UBC Library</a>]
@@ -424,9 +446,9 @@
           <li>
             <b>Vine Regression </b>
             <br>
-            <a href="https://scholar.google.com/citations?user=y6E9TycAAAAJ">Roger M. Cooke</a>,
-            <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry Joe</a>,
-            <a href="#">Bo Chang</a>
+            <a href="https://scholar.google.com/citations?user=y6E9TycAAAAJ">Roger&nbsp;M.&nbsp;Cooke</a>,
+            <a href="https://scholar.google.com/citations?user=yRSzNv0AAAAJ">Harry&nbsp;Joe</a>,
+            <a href="#">Bo&nbsp;Chang</a>
             <br> Resources for the Future Discussion Paper, 15-52.
             <br>
             [<a href="https://ssrn.com/abstract=2695063">SSRN</a>]
